<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_textColor"
    tools:context=".SearchMovie">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/queryInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black1"
            android:hint="@string/enter_movie_name"
            android:inputType="text"
            android:autofillHints="text"
            android:textColorHint="@color/hintSearchIcon"
            android:minHeight="48dp"
            android:maxWidth="488dp"
            android:background="@color/hintField_white"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/search"
            android:contentDescription="@string/movie_search_button"
            android:maxWidth="320dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_picture"/>

        <TextView
            android:id="@+id/placeholderMessage"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black_white"
            android:visibility="gone"
            tools:visibility="visible"/>

        <include layout="@layout/bottom_navigation" />

    </FrameLayout>

<!--    <include layout="@layout/bottom_navigation" />-->

</LinearLayout>