<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_textColor"
    android:id="@+id/track_item2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/arrow_back_24"/>
    <!--        🧱-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/arrow_back_24" />
    <!--        🧱-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline" />
    <!--        📱 📱-->
    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back2"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder2"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/arrow_back" />

    <TextView
        android:id="@+id/track_name"
        style="@style/Text22_400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/track_author"
        style="@style/Text14_400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/author_margin_top"
        android:layout_marginBottom="@dimen/author_margin_button"
        app:layout_constraintBottom_toTopOf="@id/play_track"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        tools:text="The Beatlesasdfasdfasdfasdfasdfasdfasdfsdsadfasdfsdafsdsdafsdafsdafasdfsdfaasdfasdfasdfsdfsdafasfdsffsdfsdafsdafasdfsdafasdfasdfdasfsddas" />
    <!--        📝-->
    <ImageView
        android:id="@+id/add_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_track"
        android:src="@drawable/add_queue"
        app:layout_constraintBottom_toBottomOf="@id/play_track"
        app:layout_constraintEnd_toStartOf="@id/play_track"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/play_track" />
    <!--        👉-->
    <ImageView
        android:id="@+id/play_track"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/play_track"
        android:src="@drawable/play"
        app:layout_constraintBottom_toTopOf="@id/play_time"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toEndOf="@id/add_track"
        app:layout_constraintTop_toBottomOf="@id/track_author"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="1" />
    <!--        // 😅-->
    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_favorite"
        android:src="@drawable/favorite"
        app:layout_constraintBottom_toBottomOf="@id/play_track"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/play_track"
        app:layout_constraintTop_toTopOf="@id/play_track" />

    <TextView
        android:id="@+id/play_time"
        style="@style/Text14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:textColor="@color/textColor_white"

        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/play_track"
        tools:text="0:30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/Padding_16" />
    <!--        🎛️-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/Padding_16" />
    <!--        🎛️-->

    <TextView
        android:id="@+id/duration"
        style="@style/Text13_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/duration_margin_top"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintTop_toBottomOf="@id/play_time" />
    <!--        🧰 🧪-->

    <TextView
        android:id="@+id/track_duration"
        style="@style/Text13_400_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@id/play_time"
        tools:text="5:35" />
    <!--        📛-->

    <TextView
        android:id="@+id/album"
        style="@style/Text13_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        android:text="@string/album"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/track_album"
        style="@style/Text13_400_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintStart_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/track_duration"
        tools:text="Yesterday (Remastered 2009)asdfsdasfasdfasdfasdfasfdasdfasdfasdfsdasdfasdfasdfsdfsdasdfasdfsdsdfdsfdasfasdfsdasdfsadfasdfsd" />
    <!--        📝-->
    <TextView
        android:id="@+id/year"
        style="@style/Text13_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintTop_toBottomOf="@id/track_album" />

    <TextView
        android:id="@+id/track_year"
        style="@style/Text13_400_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@id/track_album"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre"
        style="@style/Text13_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/track_genre"
        style="@style/Text13_400_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@id/track_year"
        tools:text="Rock" />
    <!--        🧩-->
    <TextView
        android:id="@+id/country"
        style="@style/Text13_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_margin_top"
        android:layout_marginBottom="4dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <!--        🧩-->
    <TextView
        android:id="@+id/track_country"
        style="@style/Text13_400_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom_4"
        app:layout_constraintBaseline_toBaselineOf="@+id/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toBottomOf="@id/track_genre"
        tools:text="Великобритания" />
    <!--        👇-->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/details_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="play_time, duration, track_duration, album, track_album, year, track_year, genre, track_genre, country, track_country" />
    <!--        🔒-->
</androidx.constraintlayout.widget.ConstraintLayout>